--- a/package.json
+++ b/package.json
@@ -19,50 +19,50 @@
     "test:e2e": "playwright test"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.3.4",
+    "@prisma/client": "^5.8.0",
+    "@sentry/nextjs": "^7.80.0",
+    "autoprefixer": "^10.4.17",
+    "axios": "^1.6.5",
+    "bcryptjs": "^2.4.3",
+    "bullmq": "^5.0.0",
+    "classnames": "^2.3.2",
+    "cors": "^2.8.5",
+    "date-fns": "^2.30.0",
+    "dotenv": "^16.3.1",
+    "express-rate-limit": "^7.0.0",
+    "helmet": "^7.0.0",
+    "next": "^14.1.0",
+    "next-auth": "^4.24.13",
+    "pino": "^10.1.0",
+    "pino-pretty": "^10.3.0",
+    "postcss": "^8.4.32",
+    "prisma": "^5.8.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "next": "^14.1.0",
-    "typescript": "^5.3.3",
-    "@prisma/client": "^5.8.0",
-    "prisma": "^5.8.0",
-    "tailwindcss": "^4.0.0",
-    "autoprefixer": "^10.4.17",
-    "postcss": "^8.4.32",
-    "@hookform/resolvers": "^3.3.4",
     "react-hook-form": "^7.51.0",
-    "zod": "^3.22.4",
-    "next-auth": "^4.24.13",
-    "bcryptjs": "^2.4.3",
-    "axios": "^1.6.5",
-    "stripe": "^14.0.0",
     "sharp": "^0.32.0",
-    "bullmq": "^5.0.0",
-    "@sentry/nextjs": "^7.80.0",
-    "pino": "^8.17.0",
-    "pino-pretty": "^10.3.0",
-    "dotenv": "^16.3.1",
-    "cors": "^2.8.5",
-    "helmet": "^7.0.0",
-    "express-rate-limit": "^7.0.0",
+    "stripe": "^14.0.0",
+    "tailwindcss": "^4.0.0",
+    "typescript": "^5.3.3",
     "uuid": "^9.0.1",
-    "date-fns": "^2.30.0",
-    "classnames": "^2.3.2"
+    "zod": "^3.22.4"
   },
   "devDependencies": {
+    "@playwright/test": "^1.40.1",
+    "@testing-library/jest-dom": "^6.1.5",
+    "@testing-library/react": "^14.1.2",
+    "@types/bcryptjs": "^2.4.6",
+    "@types/jest": "^29.5.11",
     "@types/node": "^20.10.5",
     "@types/react": "^18.2.45",
     "@types/react-dom": "^18.2.18",
-    "@types/jest": "^29.5.11",
-    "@testing-library/react": "^14.1.2",
-    "@testing-library/jest-dom": "^6.1.5",
+    "eslint": "^8.56.0",
+    "eslint-config-next": "^16.0.3",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
-    "@playwright/test": "^1.40.1",
     "prettier": "^3.1.1",
-    "eslint": "^8.56.0",
-    "eslint-config-next": "^14.1.0",
     "ts-node": "^10.9.2",
-    "@types/bcryptjs": "^2.4.6",
     "tsx": "^4.7.0"
   },
   "engines": {
