--- a/package.json
+++ b/package.json
@@ -8,15 +8,26 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "prisma:generate": "prisma generate",
-    "prisma:migrate": "prisma migrate dev",
-    "prisma:seed": "ts-node --transpile-only db/prisma/seed.ts",
-    "prisma:studio": "prisma studio",
     "type-check": "tsc --noEmit",
     "format": "prettier --write \"**/*.{ts,tsx,md,json}\"",
+    "setup": "powershell -ExecutionPolicy Bypass -File ./setup.ps1",
+    "setup:skip-install": "powershell -ExecutionPolicy Bypass -File ./setup.ps1 -SkipInstall",
+    "setup:with-seed": "powershell -ExecutionPolicy Bypass -File ./setup.ps1 -WithSeed",
+    "prisma:generate": "prisma generate",
+    "prisma:migrate": "prisma migrate dev",
+    "prisma:migrate:prod": "prisma migrate deploy",
+    "prisma:seed": "ts-node --transpile-only db/prisma/seed.ts",
+    "prisma:studio": "prisma studio",
+    "prisma:reset": "prisma migrate reset --force",
+    "prisma:push": "prisma db push",
     "test": "jest",
     "test:watch": "jest --watch",
-    "test:e2e": "playwright test"
+    "test:coverage": "jest --coverage",
+    "test:e2e": "playwright test",
+    "test:api": "jest --testPathPattern='.test.ts$'",
+    "health": "curl http://localhost:3000/api/health",
+    "clean": "rm -rf .next dist coverage node_modules",
+    "ci": "npm run lint && npm run type-check && npm run test && npm run build"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.3.4",
